jilles      2006/11/19 21:03:52 UTC	(20061119-7243)
  Log:
  Add release notes for 2.1 upto now.
  

  Changes:	Modified:
  +38 -0	trunk/doc/RELEASE (File Modified) 


jilles      2006/11/19 20:25:04 UTC	(20061119-7241)
  Log:
  Const warning fix.
  

  Changes:	Modified:
  +1 -1		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/19 20:22:27 UTC	(20061119-7239)
  Log:
  handle_kill(): use get_oper_name()
  

  Changes:	Modified:
  +1 -4		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/19 20:21:25 UTC	(20061119-7237)
  Log:
  Allow server sourceinfo_t's in get_source_name(),
  get_source_mask() and get_oper_name(). The result
  is the server name.
  

  Changes:	Modified:
  +6 -0		trunk/src/services.c (File Modified) 


jilles      2006/11/19 20:02:08 UTC	(20061119-7235)
  Log:
  Implement LG_NETWORK, shows notices about servers
  joining, leaving and confirming end of burst.
  

  Changes:	Modified:
  +1 -1		trunk/include/tools.h (File Modified) 
  +1 -1		trunk/src/ptasks.c (File Modified) 
  +5 -2		trunk/src/servers.c (File Modified) 


jilles      2006/11/19 19:25:53 UTC	(20061119-7233)
  Log:
  Change the logging system (requires recompiling all
  modules, but no source changes).
  Treat the original LG_DEBUG, LG_INFO and LG_ERROR and
  CMDLOG_* as categories, and add some more: LG_RAWDATA,
  LG_NETWORK (future: netsplit/join), LG_WALLOPS (future).
  The loglevel directive in atheme.conf now accepts some
  more values, and only DEBUG and TRACE log all commands.
  Each value selects a certain subset of categories.
  

  Changes:	Modified:
  +1 -1		trunk/dist/example.conf (File Modified) 
  +1 -1		trunk/include/global.h (File Modified) 
  +24 -7	trunk/include/tools.h (File Modified) 
  +1 -1		trunk/src/atheme.c (File Modified) 
  +10 -10	trunk/src/conf.c (File Modified) 
  +6 -3		trunk/src/function.c (File Modified) 
  +2 -2		trunk/src/parse.c (File Modified) 
  +1 -1		trunk/src/send.c (File Modified) 