@@ -1,3 +1,12 @@
+jilles      2006/11/19 21:09:03 UTC	(20061119-7245)
+  Log:
+  Do not part the snoop channel when disabling GUARD on it.
+  
+
+  Changes:	Modified:
+  +1 -1		trunk/modules/chanserv/set.c (File Modified) 
+
+
 jilles      2006/11/19 21:03:52 UTC	(20061119-7243)
   Log:
   Add release notes for 2.1 upto now.
